# claude-classroom-submit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  README.md  SECURITY.md  cliff.toml  flake.nix  lefthook.yml  pyproject.toml  sonar-project.properties
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  dependabot.yml  og-card.html  pull_request_template.md  scorecard-config.yml
.github/workflows/: ci.yml  codeql.yml  mypy.yml  osv-scan.yml  release.yml  scorecard.yml  sonar.yml
commands/: classroom-auth.md  classroom-find.md  classroom-submit.md
docs/: config.example.json  google-cloud-setup.md  nixos-integration.md
docs/assets/: classroom-demo.cast
scripts/: lint.sh  marketing-apply-repo-metadata.sh  setup-wizard.sh
skills/classroom-submit/: SKILL.md  classroom-lib.sh  classroom.py
