[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-classroom-submit"
version = "0.1.1"
description = "Autonomous Google Classroom submission for Claude Code — pure stdlib Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Pedro H S Balbino" }]
keywords = ["claude-code", "google-classroom", "submission", "plugin"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Education",
  "Typing :: Typed",
]
# LOAD-BEARING: zero dependencies. stdlib-only is the trust contract.
# If a future feature needs a dep, it belongs in a separate plugin.
dependencies = []

[project.urls]
Homepage = "https://github.com/yolo-labz/claude-classroom-submit"
Repository = "https://github.com/yolo-labz/claude-classroom-submit"
Issues = "https://github.com/yolo-labz/claude-classroom-submit/issues"
Changelog = "https://github.com/yolo-labz/claude-classroom-submit/blob/main/CHANGELOG.md"

[project.scripts]
classroom = "skills.classroom_submit.classroom:main"

[tool.hatch.build.targets.wheel]
packages = ["skills"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
